plugins {
    id 'java'

}
java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}
group = 'cc.zyycc'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    minecraftVersion = '1.16.5'
    forgeVersion = '36.2.34'
    forgeFullVersion = "${minecraftVersion}-${forgeVersion}"
    versionName = '1.0.0'
    workingDir = "."
    cachePath = ".${server_id}"
    bukkitVersion = 'v1_16_R3'
}

dependencies {
}
//application {
//    applicationDefaultJvmArgs = [
//            '--add-opens', 'jdk.attach/sun.tools.attach=ALL-UNNAMED',
//            '--add-exports', 'jdk.attach/com.sun.tools.attach=ALL-UNNAMED',
//            '-Djdk.attach.allowAttachSelf=true'
//    ]
//}


//禁用编译
tasks.named('jar').configure {
    enabled = false
}




//编译
tasks.register('collectJars', Copy) {
    destinationDir = file 'build/libs'
    from { project(':zyy-launcher').tasks.jar.outputs }
    dependsOn { project(':zyy-launcher').tasks.jar }
}


// root build.gradle
tasks.build {
    finalizedBy tasks.collectJars
}

jar {
    manifest {
        attributes(
                'Premain-Class': 'cc.zyycc.ClasspathPrinterAgent',
                'Manifest-Version': '1.0',
                'Agent-Class': 'cc.zyycc.ClasspathPrinterAgent',
                'Can-Redefine-Classes': 'true',
                'Can-Retransform-Classes': 'true'
        )
    }
    from{
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}